--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: downscale_dev
 channels:
   - conda-forge
 dependencies:
+  - cartopy=0.19.0
   - jupyterlab=3.0.14
   - matplotlib=3.4.1
   - numpy=1.20.2
