--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - python=3.9.2
   - scipy=1.6.2
   - xarray=0.17.0
+  - pip=20.1
   - pip:
     - cdsapi==0.5.1
 prefix: /home/steidani/miniconda3/envs/downscale_dev
