--- a/environment.yml
+++ b/environment.yml
@@ -3,14 +3,17 @@ channels:
   - conda-forge
 dependencies:
   - cartopy=0.19.0
+  - elevation=1.1.3
   - jupyterlab=3.0.14
   - matplotlib=3.4.1
   - numpy=1.20.2
   - pandas=1.2.4
   - python=3.9.2
+  - rasterio=1.2.3
   - scipy=1.6.2
   - xarray=0.17.0
   - pip=20.1
   - pip:
     - cdsapi==0.5.1
+    - topo-descriptors=0.1.1
 prefix: /home/steidani/miniconda3/envs/downscale_dev
