--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ __pycache__
 .ipynb_checkpoints
 .vscode
 .DS_Store
+logs
+checkpoints
+data/ERA5
+*.egg-info
+*.npy
+*.nc
+*.png
+*.gif
+
+# TeX compilation
+*.aux
+*.bbl
+*.blg
+*.log
+*.out
+*.synctex.gz
+*.toc
