--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,8 @@ dependencies:
   - scipy=1.6.2
   - xarray=0.17.0
   - pip=20.1
+  - tensorboard=2.4.0
+  - tensorflow=2.4.3
   - pip:
     - cdsapi==0.5.1
     - topo-descriptors==0.1.1
