--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,12 @@ tensorboard==2.4.0
 ipykernel==5.5.5
 ipython_genutils==0.2.0
 matplotlib==3.4.1
+notebook==6.4.4
+xarray==0.19.0
+pandas==1.3.3
+cdsapi==0.5.1
+scipy==1.6.2
+netCDF4==1.5.6
+h5py== 2.10.0
+hdf5==1.10.6
+mpi4py==3.1.1
