--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,10 @@ netCDF4==1.5.6
 h5py== 2.10.0
 mpi4py==3.1.1
 cached_property
+silence-tensorflow
+parse
+protobuf==3.20.3
+topo-descriptors
+dask
+rasterio
 git+https://github.com/OpheliaMiralles/wind-downscaling-gan.git
